fixed create nb/tags modal button text alignment

--- a/app/assets/stylesheets/components/_nb_tag_create.scss
+++ b/app/assets/stylesheets/components/_nb_tag_create.scss
@@ -54,9 +54,12 @@
     button {
       width: 190px;
       height: 35px;
+      line-height: 30px;
+      vertical-align: middle;
       border-radius: 5px;
       letter-spacing: 2px;
       margin: 3.5px;
+      font-weight: 100;
     }
 
     .cancel-btn {
